# docs/api/openapi.json
@@ -143,6 +143,18 @@
             "title": "Stages",
             "type": "array"
           },
+          "started_at": {
+            "anyOf": [
+              {
+                "format": "date-time",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Started At"
+          },
           "status": {
             "enum": [
               "draft",
